[build-system]
requires = ["setuptools>=65.6.3", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "ppktstore"
# version in __init__
requires-python = ">=3.12"
description = "Collection of GA4GH Phenopackets"
readme = "README.md"
authors = [
    {name = "Daniel Danis", email="daniel.danis@bih-charite.de"},
    {name = "Peter Robinson", email="peter.robinson@jax.org"},
    ]
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
]
keywords = [
    "Global Alliance for Genomics and Health",
    "GA4GH Phenopacket Schema",
    "Human Phenotype Ontology",
    "GA4GH",
    "HPO"]
dependencies = [
    "mdutils>=1.6.0",
    "phenopackets>=2.0.2.post4",
    "pandas>=2.0.0, <3.0.0", # 2.0.0 was released on Apr 3, 2023
    "numpy>=1.24.2, <2.0.0", # 1.24.2 was released on Feb 5, 2023
    "certifi", # The latest version is the best.
]
dynamic = ["version"]

[project.optional-dependencies]
# Dependencies needed for running the test suite.
test = [
    "pytest>=7.0.0, <8.0.0",
]

# Dependencies needed for generating the online documentation.
docs = [
    "mkdocstrings[python]",
    "mkdocs-material[imaging]",
    "mkdocs-material-extensions",
    "pillow",
    "cairosvg",
]

# Dependencies needed for running the Jupyter notebooks within the repo.
notebooks = [
    "matplotlib>=3.7.2, <4.0.0", # 3.7.2 was released on Jul 5, 2023
    "seaborn>=0.12.2, <1.0.0",   # 0.12.2 was released on Dec 30, 2022
]

[project.urls]
homepage = "https://github.com/monarch-initiative/phenopacket-store"
repository = "https://github.com/monarch-initiative/phenopacket-store.git"
documentation = "https://github.com/monarch-initiative/phenopacket-store"
bugtracker = "https://github.com/monarch-initiative/phenopacket-store/issues"



[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.dynamic]
version = { attr = "ppktstore.__version__" }

